# Bluefin-AI-Agent-Trader

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  bluefin_trader.py  docker-compose.yml  pyproject.toml  requirements.txt
backup/: .env.template
bluefinaiagentradertemplate/: .env.template  README.md  main.py  requirements.txt
bluefinaiagentradertemplate/config/: config.json
bluefinaiagentradertemplate/examples/: simple_trading_example.py
bluefinaiagentradertemplate/nix/: flake.nix
bluefinaiagentradertemplate/services/: ai_agent_service.py  bluefin_service.py  strategy_service.py
config/: .gitignore  config.json  config.py
core/: risk_manager.py  signal_processor.py  trade_executor.py  visualization.py
docker/: Dockerfile  Dockerfile.nix  docker-compose.nix.yml  docker-compose.yml
docs/: ARCHITECTURAL_RECOMMENDATIONS.md  NIX_INTEGRATION.md  SECRETS_MANAGEMENT.md  SETUP_GUIDE.md
examples/: secrets_manager_demo.py
nix/: flake.nix
scripts/: deploy-nix.sh
services/: ai_agent_service.py  bluefin_service.py  position_service.py  screenshot_service.py  webhook_service.py
services/ai_analysis/: Dockerfile  app.py
services/chart/: Dockerfile  app.py
services/position_monitor/: Dockerfile  app.py
services/trading/: Dockerfile  app.py
services/webhook/: Dockerfile  app.py
tests/: README.md  test_bluefin_account.py
utils/: README.md  secrets_manager.py
