2.43[tool.poetry]
name= "bluefin-ai-agent-trader"
version = "0.1.0"
description = "Advanced AI-powered cryptocurrency trading agent"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "bluefin_ai_agent_trader"}]

[tool.poetry.dependencies]
python = "^3.8"
# Core dependencies
cryptography = "^41.0.3"  # For encryption
hvac = "^1.1.0"  # HashiCorp Vault client
pydantic = "^2.3.0"  # Data validation
python-dotenv = "^1.0.0"  # Environment variable management

# Trading and API dependencies
requests = "^2.31.0"
websockets = "^11.0.3"
pandas = "^2.0.2"
numpy = "^1.24.3"

# Machine Learning and AI
scikit-learn = "^1.2.2"
tensorflow = "^2.12.0"
torch = "^2.0.1"

# Logging and Monitoring
structlog = "^23.1.0"
prometheus-client = "^0.16.0"

# Development and Testing
pytest = "^7.3.1"
mypy = "^1.3.0"
black = "^23.3.0"
isort = "^5.12.0"

[tool.poetry.group.dev.dependencies]
# Additional development dependencies
coverage = "^7.2.5"
pylint = "^2.17.4"
bandit = "^1.7.5"

[tool.poetry.scripts]
bluefin-trader = "bluefin_trader:main"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
disallow_any_generics = true
strict_optional = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"