[tool.poetry]
name = "bluefin-ai-agent-trader-template"
version = "0.1.0"
description = "Template for AI-powered trading agent for Bluefin exchange"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "bluefin_ai_agent_trader_template"}]

[tool.poetry.dependencies]
python = "^3.10"
# Core dependencies
aiohttp = "^3.8.0"
httpx = "^0.23.0"
pydantic = "^2.3.0"
python-dotenv = "^1.0.0"
backoff = "^2.2.1"
cryptography = "^41.0.3"

# Simulation dependencies
numpy = "^1.24.0"
pandas = "^2.0.0"

# Logging and monitoring
prometheus-client = "^0.17.0"
structlog = "^23.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
